--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="clock">
-        <span class="clock-time">12:45</span>
-        <span class="clock-ampm">PM</span>
+        <span class="clock-time"></span>
+        <span class="clock-ampm"></span>
     </div>
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
